--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-spinners": "^0.13.8",
-    "vite-plugin-svgr": "^4.1.0"
+    "ssh2": "^1.15.0",
+    "vite-plugin-svgr": "^4.1.0",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
